Bug 319623 - broken header display on certain mails
Summary: broken header display on certain mails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-10 12:56 UTC by l.mierzwa
Modified: 2013-06-27 15:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments
gog email (10.69 KB, application/mbox)
2013-05-10 12:57 UTC, l.mierzwa
Details
screenshot (36.48 KB, image/png)
2013-05-10 12:57 UTC, l.mierzwa
Details
HTML GOG email in Kmail (167.52 KB, image/png)
2013-06-16 03:29 UTC, Daniel Rehren
Details

Note You need to log in before you can comment on or make changes to this bug.
Description l.mierzwa 2013-05-10 12:56:58 UTC
Once in a while gog.com sends me an email with new offers and AFAIR it's always displayed in very ugly way. Email is attached, just open it in kmail

Reproducible: Always

Steps to Reproduce:
1. get email from gog
Comment 1 l.mierzwa 2013-05-10 12:57:23 UTC
Created attachment 79811 [details]
gog email
Comment 2 l.mierzwa 2013-05-10 12:57:44 UTC
Created attachment 79812 [details]
screenshot
Comment 3 Daniel Rehren 2013-06-16 03:29:14 UTC
Created attachment 80545 [details]
HTML GOG email in Kmail
Comment 4 Daniel Rehren 2013-06-16 03:30:52 UTC
It happens to me too. I've attached a screenshot of it.
Comment 5 Laurent Montel 2013-06-27 15:15:16 UTC
I confirm it
Comment 6 Laurent Montel 2013-06-27 15:15:56 UTC
Git commit b77a65e2d09d030ac02ac28915000c65433cdff7 by Montel Laurent.
Committed on 27/06/2013 at 15:15.
Pushed by mlaurent into branch 'master'.

Fix Bug 319623 - broken header display on certain mails

FIXED-IN: 4.11

M  +1    -0    messageviewer/header/headerstyle_util.cpp
M  +7    -0    messageviewer/tests/data/encapsulated-with-attachment.mbox.html
M  +7    -0    messageviewer/tests/data/forward-openpgp-signed-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/html.mbox.html
M  +7    -0    messageviewer/tests/data/htmlonly.mbox.html
M  +7    -0    messageviewer/tests/data/inlinepgpencrypted-appendix.mbox.html
M  +7    -0    messageviewer/tests/data/inlinepgpencrypted.mbox.html
M  +7    -0    messageviewer/tests/data/no-content-type.mbox.html
M  +7    -0    messageviewer/tests/data/openpgp-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/openpgp-signed-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/openpgp-signed-mailinglist.mbox.html
M  +7    -0    messageviewer/tests/data/signed-forward-openpgp-signed-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/smime-encrypted-octet-stream.mbox.html
M  +7    -0    messageviewer/tests/data/smime-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/smime-signed-encrypted.mbox.html
M  +7    -0    messageviewer/tests/data/text+html-maillinglist.mbox.html
M  +7    -0    messageviewer/tests/data/tnef-one-file.mbox.html
M  +7    -0    messageviewer/tests/data/tnef-two-files.mbox.html
M  +7    -0    messageviewer/viewer/csshelperbase.cpp

http://commits.kde.org/kdepim/b77a65e2d09d030ac02ac28915000c65433cdff7