Fix Bug 319623 - broken header display on certain mails

FIXED-IN: 4.11
BUG: 319623